<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:isScrollContainer="true"
  >
    
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie1" 
    android:text="@string/Taipeimovie1"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie2" 
    android:text="@string/Taipeimovie2"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie3" 
    android:text="@string/Taipeimovie3"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie4" 
    android:text="@string/Taipeimovie4"
    android:drawableLeft="@drawable/region1"
   >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie5" 
    android:text="@string/Taipeimovie5"
    android:drawableLeft="@drawable/region1"
   >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie6" 
    android:text="@string/Taipeimovie6"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie7" 
    android:text="@string/Taipeimovie7"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie8" 
    android:text="@string/Taipeimovie8"
    android:drawableLeft="@drawable/region1"
    >
    </Button>
    <Button 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:id="@+id/Taipeimovie9" 
    android:text="@string/Taipeimovie9"
    android:drawableLeft="@drawable/region1"
   >
    </Button>
    
    
    </LinearLayout>
         